--- a/css/styles.scss
+++ b/css/styles.scss
@@ -14,6 +14,7 @@ textarea:focus {
   right: 0 !important;
   top: 0 !important;
   height: fit-content !important;
+  display: none !important;
 }
 
 //.a-modal {
